ui/single/locals-cfg.stderr
error[E0425]: cannot find value `FOO` in this scope
  --> $DIR/locals-cfg.rs:10:9
   |
10 |         FOO;
   |         ^^^ not found in this scope

error[E0425]: cannot find value `FOO` in this scope
  --> $DIR/locals-cfg.rs:18:9
   |
18 |         FOO;
   |         ^^^ not found in this scope

error[E0425]: cannot find value `FOO` in this scope
  --> $DIR/locals-cfg.rs:28:9
   |
28 |         FOO;
   |         ^^^ not found in this scope

error[E0425]: cannot find value `FOO` in this scope
  --> $DIR/locals-cfg.rs:36:9
   |
36 |         FOO;
   |         ^^^ not found in this scope

error[E0425]: cannot find value `FOO` in this scope
  --> $DIR/locals-cfg.rs:44:9
   |
44 |         FOO;
   |         ^^^ not found in this scope

error: duplicate lang item in crate `panic_halt`: `panic_impl`.
  |
  = note: the lang item is first defined in crate `std` (which `$CRATE` depends on)
  = note: first definition in `std` loaded from /usr/share/rust/.rustup/toolchains/stable-x86_64-unknown-linux-gnu/lib/rustlib/x86_64-unknown-linux-gnu/lib/libstd-cf0f33af3a901778.rlib
  = note: second definition in `panic_halt` loaded from $DIR/target/tests/target/x86_64-unknown-linux-gnu/debug/deps/libpanic_halt-ba6f0ab3439cbc7e.rmeta

error: duplicate lang item in crate `panic_semihosting`: `panic_impl`.
  |
  = note: the lang item is first defined in crate `panic_halt`.
  = note: first definition in `panic_halt` loaded from $DIR/target/tests/target/x86_64-unknown-linux-gnu/debug/deps/libpanic_halt-ba6f0ab3439cbc7e.rmeta
  = note: second definition in `panic_semihosting` loaded from $DIR/target/tests/target/x86_64-unknown-linux-gnu/debug/deps/libpanic_semihosting-805015f4a2d05965.rmeta
